<?xml version="1.0"?>
<package format="2">
  <name>capteur_1</name>
  <version>0.0.0</version>
  <description>The capteur_1 package</description>

  <maintainer email="led@todo.todo">led</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>weez_u_msgs</depend>


  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
